<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">le Chat de ta mère</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_title">Bienvenue dans le Chat de ta mère</string>
    <string name="password_form">Ton mot de passe ici</string>
    <string name="login_form">Ton identifiant ici</string>
    <string name="cancel_btn">Vider Champs</string>
    <string name="connect_btn">Connect</string>
    <string name="title_activity_chat_page">Chat Page</string>
     <string name="title_activity_subscriber_page">Page Inscription</string>
    <string name="unknown_id">Identifients incorrectes</string>
    <string name="api_return_shit">Identifients incorrectes</string>
    <string name="connexion_progress_title">Patientez</string>
    <string name="connecsion_progress_body">Interrogation du server</string>
    <string name="forms_empty">Veuillez remplir tous les champs</string>
    <string name="unlog">Déconnexion</string>
    <string name="your_name">Bonjour </string>
    <string name="your_message">Tapez votre message ici</string>
    <string name="send_message">Envoyer</string>
    <string name="send_failed">L\'envoie à échoué, essayez ultérieurement</string>    
    <string name="message_empty">votre message est vide</string>
    <string name="inscription_btn">Inscription</string>
 	<string name="or_txt">ou</string>
 	<string name="registration_title">Page Inscription</string>
 	<string name="subscribe_btn">Créer</string>
 	<string name="retour_btn">Retour Connexion</string>
 	<string name="logout_btn">Log Out</string>
 	<string name="subscriber">Ca plante pas juste que le webservice ne renvois pas un code erreur juste html...</string>
</resources>
