<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#61D656"
    tools:context="com.example.parlezvousandroid.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/welcome_title"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:hint="@string/login_form"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/password_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_form"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:inputType="textPassword"
        android:hint="@string/password_form"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="3" 
		android:layout_alignParentBottom="true">

        <Button
            android:layout_width="1dp"
            android:layout_height="75dp"
            android:id="@+id/cancel_btn"
            android:layout_weight="1"
            android:text="@string/cancel_btn" />

        <Button            
            android:layout_width="1dp"
            android:layout_height="75dp"
            android:id="@+id/connect_btn"
            android:layout_weight="1"
            android:text="@string/connect_btn" />
    </LinearLayout>

</RelativeLayout>