<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/registration_title"
 		android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#61D656"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:textColor="#FFFFFF"
            
            android:textStyle="bold"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/registration_title"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/registration_title"
        android:gravity="center"
        android:hint="@string/login_form"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:layout_weight="1"
        android:layout_below="@+id/login_form"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password_form"
        android:inputType="textPassword"
        android:textSize="20sp" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/retour_btn"
        android:gravity="clip_horizontal"
        android:orientation="horizontal"
        android:weightSum="3" >

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_weight="2"
            android:background="#7D2400"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/cancel_btn" />
        
        <Button
            android:id="@+id/subscribe_btn"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:layout_marginLeft="2dp"
            android:background="#09CE02"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/subscribe_btn" />
        
    </LinearLayout>
     <Button
            android:id="@+id/retour_btn"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="#A8CE9A"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:text="@string/retour_btn" />

</RelativeLayout>