<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#61D656"
    tools:context="com.example.parlezvousandroid.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="8"
        android:orientation="vertical" >

        <Button
            android:id="@+id/logout_btn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="87dp"
            android:layout_height="30dp"
            android:layout_weight="0.06"
            android:padding="2dp"
            android:text="@string/logout_btn" />

        <TextView
            android:id="@+id/welcome_name"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingBottom="1dp"
            android:paddingTop="10dp"
            android:text="@string/your_name"
            android:padding="2dp"
            android:textSize="20dp"
            android:layout_weight="1" />
        
        <ListView 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="4.5"
            android:background="#FFFFFF"
            ></ListView>
        
        <EditText 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1.5"
            android:background="#CCCCCC"
            android:gravity="center"
            android:hint="@string/your_message"
            android:id="@+id/message_zone"
            />
        <Button 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:text="@string/send_message"
            android:id="@+id/send_message"/>
    </LinearLayout>

</RelativeLayout>